# dcmr

./: .gitignore  .profile  .zenodo.json  README.md  init_cfr.m  pyproject.toml  readthedocs.yml  requirements.txt  setup.cfg  setup.py
cmr_cfr/: decode_cfrl.m  indiv_slope.m
data/: cdcfr2_data_clean_s2.mat  cdcfr2_data_raw.mat  cfr_eeg_data.mat  cfr_eeg_mixed_data.mat  cfr_eeg_mixed_data_clean.mat
data/cdcfr2_data/: clust_cat.eps  crp_from_cat.eps  crp_to_cat.eps  crp_within_cat.eps  pfr_cat.eps  sem_crp.eps  sem_crp_between.eps  sem_crp_within.eps  spc_cat.eps
docs/source/: conf.py  index.rst
docs/source/api/: framework.rst  overview.rst  reports.rst  scripts.rst  task.rst
docs/source/api/scripts/: adjust_sim.rst  fit_cmr.rst  plot_fit.rst  xval_cmr.rst
functions/analysis/: events2table_cfr_study.m  export_pattern_dir.m  fix_item_column.m  frdata2table_cdcfr2.m  frdata2table_cfr.m  print_sem_crp.m
functions/decode/: unit_preprocessing.m  unit_xval.m
functions/model/: get_exp_info_cfrl.m  get_fit_info_cfrl.m  model_features_cfrl.m  sim_def_cfrl.m  unpack_search_cfrl.m
jupyter/: benchmark.ipynb  cdcatfr_class_context.ipynb  cdcatfr_model_fit.ipynb  classify_context_eeg.ipynb  classify_recording.ipynb  classify_recording2.ipynb  create_patterns.ipynb  demo_param.ipynb  demo_recording.ipynb  demo_sim.ipynb  demo_sweep_B.ipynb  demo_sweep_L.ipynb  demo_sweep_w.ipynb  explore_cat_clust.ipynb  fit_stats.ipynb  incidental_sim.ipynb  manual_model_comp.ipynb  plot_behav.ipynb  plot_class_context.ipynb  plot_class_eeg.ipynb  plot_model_comp.ipynb  plot_model_comp2.ipynb  plot_model_comp_cmrs.ipynb  plot_model_comp_ff.ipynb  plot_model_comp_peers.ipynb  plot_model_comp_sim1.ipynb  plot_model_comp_sim1_xval.ipynb  plot_model_comp_sim2.ipynb  plot_model_comp_sim2_xval.ipynb  plot_model_fit.ipynb  plot_model_fit_sim1.ipynb  plot_model_fit_sim2.ipynb  plot_model_fit_sim2_cs.ipynb  plot_model_fit_sim2_cs_peers.ipynb  plot_model_fit_sim2_cs_peers2.ipynb  plot_recording.ipynb  plot_schematic.ipynb  plot_search.ipynb  plot_sem.ipynb  plot_sweep_B.ipynb  (+44 more)
live/: demo_fit.mlx  run_cfr_analysis.m
matlab/: convert_peers.m  prep_data_cfr_cymr.m  slopes_cdcatfr2.m
matlab/data/: MortPoly17.csv  cdcfr2_data_clean_s1.mat  cfr_data.mat  cfr_wikiw2v_bin.mat
matlab/functions/analysis/: calc_sem_crp.m  write_benchmark_cfr.m
matlab/functions/decode/: unit_eeg.m  unit_logreg.m
matlab/functions/model/: indiv_search_cfrl.m  run_res_indiv_best_params_cfrl.m
matlab/scripts/: run_accre_search.m  run_best_param_generative_cfrl.m
scripts/: run_accre_search.m  run_cfr_analysis.mlx  run_local_search.m  run_sem_crp.m  run_tcm_cfrl.m  test_logreg_unit.m
src/cfr/: batch.py  decode.py  figures.mplstyle  figures.py  framework.py  reports.py  task.py
src/cfr/models/: cfr.json  peers.json
src/cfr/templates/: report.html
src/dcmr/: batch.py  cli.py  decode.py  figures.py  framework.py  reports.py  task.py
src/dcmr/models/: cfr.json  cfr2.json  peers.json  peers2.json
src/dcmr/templates/: report.css  report.html
tests/: test_framework.py  test_logreg.py  test_param.py
