[project]
name = "dcmr"
version = "1.0.0-alpha"
authors = [
    {name = "Neal W Morton", email = "mortonne@gmail.com"},
    {name = "Sean M. Polyn", email = "sean.polyn@vanderbilt.edu"}
]
description = "DCMR: Distributed Context Maintenance and Retrieval model"
readme = "README.md"
requires-python = ">=3.7"
keywords = ["modeling", "memory", "EEG"]
license = {text = "GPL-3.0-or-later"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Operating System :: OS Independent"
]
dependencies = [
    "numpy",
    "scipy",
    "pandas",
    "joblib",
    "matplotlib>=3.5",
    "seaborn",
    "scikit-image",
    "scikit-learn",
    "psifr",
    "cymr",
    "wikivector",
    "jinja2",
    "pingouin",
    "ezlaunch",
    "mindstorm",
    "watermark",
    "click",
    "pyarrow",
    "jupyterlab",
]

[project.scripts]
dcmr_restricted_models = "dcmr.framework:print_restricted_models"
dcmr-fit = "dcmr.framework:fit_cmr"
dcmr-xval = "dcmr.framework:xval_cmr"
dcmr-sim = "dcmr.framework:sim_cmr"
dcmr-plan-fit = "dcmr.batch:plan_fit_cmr"
dcmr-plan-xval = "dcmr.batch:plan_xval_cmr"
dcmr-plan-sim = "dcmr.batch:plan_sim_cmr"
dcmr-join-xval = "dcmr.batch:join_xval"
dcmr-plot-fit = "dcmr.reports:plot_fit"
dcmr-plan-plot-fit = "dcmr.batch:plan_plot_fit"
dcmr-decode-eeg = "dcmr.decode:decode_eeg"
dcmr-decode-context = "dcmr.decode:decode_context"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
