[metadata]
name = cfr
version = 0.1.0
url = https://github.com/vucml/cmr_cfr
author = Neal Morton
author_email = mortonne@gmail.com
description = CMR-CFR: Context Maintenance and Retrieval model of categorized free recall
long_description = file: README.md
long_description_content_type = text/markdown
keywords = modeling, memory, EEG
license = GPL-3.0-or-later
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Operating System :: OS Independent

[options]
install_requires =
    numpy
    scipy
    pandas
    joblib
    matplotlib>=3.5
    seaborn
    scikit-image
    scikit-learn
    psifr
    cymr
    wikivector
    jinja2
    pingouin
    ezlaunch
    mindstorm
    watermark
package_dir =
    = src
packages = find:

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    cfr_restricted_models = cfr.framework:print_restricted_models
